--- a/config.h.in
+++ b/config.h.in
@@ -679,6 +679,7 @@
 #undef WITH_LISTEN
 #undef WITH_SOCKS4
 #undef WITH_SOCKS4A
+#define WITH_HKS3
 #undef WITH_VSOCK
 #undef WITH_PROXY
 #undef WITH_EXEC
